<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".additionalinformation.AdditionalInformationFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/additional_info_text_title"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_work_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/work_time_hint"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/edit_vehicle_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vehicle_time_hint"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_work_time" />

    <EditText
        android:id="@+id/edit_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/state_hint"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_vehicle_time" />

    <TextView
        android:id="@+id/second_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/path_travelad_text"
        android:textStyle="bold"
        android:fontFamily="@font/roboto"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_state"
        />

    <EditText
        android:id="@+id/edit_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/source_hint"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_title" />

    <EditText
        android:id="@+id/edit_destiny"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/destiny_hint"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_source" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_button_hint"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_destiny" />

</androidx.constraintlayout.widget.ConstraintLayout>