<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".secondpersonalinfo.SecondPersonalInfoFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/personal_info_title"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_cep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cep_hint"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/edit_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city_hint"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_cep" />

    <EditText
        android:id="@+id/edit_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/state_hint"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_city" />

    <EditText
        android:id="@+id/edit_district"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/district_hint"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_state" />

    <Button
        android:id="@+id/next_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_step"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_district" />
</androidx.constraintlayout.widget.ConstraintLayout>