<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".vehicleinfo.VehicleInfoFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/vehicle_info_text"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vehicle_type_hint"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/edit_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/year_hint"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_type" />

    <EditText
        android:id="@+id/edit_mileage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mileage_hint"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_year" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#dcdcdc"
        android:gravity="top|left"
        android:layout_margin="10dp"
        android:inputType="textMultiLine"
        android:overScrollMode="always"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:lines="6"
        android:hint="@string/description_hint"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:scrollHorizontally="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_mileage"
        />

    <Button
        android:id="@+id/button_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_button_text"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_description" />

    <Button
        android:id="@+id/next_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_step"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_image" />

</androidx.constraintlayout.widget.ConstraintLayout>